--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Color Ramp XML Generator</title>
+<title>QGIS Color Ramp XML Generator</title>
 <style>
 body {
     font-family: sans-serif;
@@ -22,6 +22,15 @@ h1 {
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-top: 20px;
+    width: 80%;
+    max-width: 800px;
+}
+.ramp-group {
+    position: relative;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 5px;
 }
 label {
     display: block;
@@ -29,7 +38,7 @@ label {
     color: #555;
 }
 input[type="text"] {
-    width: 100%;
+    width: calc(100% - 22px);
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ddd;
@@ -48,78 +57,322 @@ button {
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-right: 10px;
 }
 button:hover {
     background-color: #45a049;
 }
+.error-message {
+    color: red;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    min-height: 1.2em;
+}
+.delete-button {
+    background-color: #FF0000;
+    margin-top:10px;
+}
+.delete-button:hover {
+    background-color: #cc0000;
+}
+.color-viewer {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 5px;
+    border: 1px solid #ccc;
+    vertical-align: middle;
+    margin-bottom: 15px;
+}
 </style>
 </head>
 <body>
-
-<h1>Color Ramp XML Generator</h1>
-
+<h1>QGIS Color Ramp XML Generator</h1>
 <div class="container">
-    <label for="colorInput">Enter Hex Color Codes (comma-separated):</label>
-    <input type="text" id="colorInput" value="#000000,#FFFFFF,#FF0000">
-
-    <label for="rampName">Ramp Name:</label>
-    <input type="text" id="rampName" value="MyColorRamp">
-
-    <label for="rampTags">Ramp Tags (comma-separated):</label>
-    <input type="text" id="rampTags" value="custom,ramp">
-
+    <div id="ramp-containers">
+        <!-- Ramp groups will be added here dynamically -->
+    </div>
+    <button onclick="addRamp()">Add Ramp</button>
     <button onclick="generateXML()">Generate XML</button>
 </div>
 
 <script>
-function generateXML() {
-    const hexColors = document.getElementById('colorInput').value.split(',');
-    const rampName = document.getElementById('rampName').value;
-    const rampTags = document.getElementById('rampTags').value;
+let rampCounter = 0; // Counter for generating unique IDs
 
-    let xmlString = '<qgis_style version="2">\n<symbols/>\n<colorramps>\n';
-    xmlString += `<colorramp type="preset" name="${rampName}" tags="${rampTags}">\n`;
-    xmlString += '<Option type="Map">\n';
+function addRamp() {
+    const container = document.getElementById('ramp-containers');
+    const existingRamps = container.querySelectorAll('.ramp-group').length;
 
-    hexColors.forEach((hexColor, index) => {
-        const rgb = hexToRgb(hexColor.trim());
-        if (rgb) {
-            const rgba = rgb.r + ',' + rgb.g + ',' + rgb.b + ',255';
-            xmlString += `<Option type="QString" name="preset_color_${index}" value="${rgba}"/>\n`;
-            xmlString += `<Option type="QString" name="preset_color_name_${index}" value="${index}. Color ${index}"/>\n`;
+    if (existingRamps >= 10) {
+        alert("Maximum 10 ramps allowed!");
+        return;
+    }
+
+    rampCounter++; // Increment for unique ID
+    const newRampId = `ramp-group-${rampCounter}`; // Use hyphen for clarity if desired
+    const currentRampIndex = rampCounter; // Index for elements within this ramp
+
+    // --- *** CORRECTED PART: Use DOM Manipulation *** ---
+
+    // 1. Create the main container div for the new ramp
+    const newRampElement = document.createElement('div');
+    newRampElement.className = 'ramp-group';
+    newRampElement.id = newRampId;
+
+    // 2. Create and configure elements inside the new ramp div
+
+    // Color Input Label
+    const colorLabel = document.createElement('label');
+    colorLabel.htmlFor = `colorInput${currentRampIndex}`;
+    colorLabel.textContent = 'Enter Hex Color Codes (comma-separated):';
+    newRampElement.appendChild(colorLabel);
+
+    // Color Input
+    const colorInput = document.createElement('input');
+    colorInput.type = 'text';
+    colorInput.id = `colorInput${currentRampIndex}`;
+    colorInput.value = '#000000,#FFFFFF,#FF0000'; // Default value for new ramps
+    colorInput.oninput = () => updateColorViewers(newRampId); // Use arrow function or bind
+    newRampElement.appendChild(colorInput);
+
+    // Color Viewers Div
+    const colorViewersDiv = document.createElement('div');
+    colorViewersDiv.id = `color-viewers${currentRampIndex}`;
+    newRampElement.appendChild(colorViewersDiv);
+
+    // Error Message Div
+    const errorDiv = document.createElement('div');
+    errorDiv.id = `error-message${currentRampIndex}`;
+    errorDiv.className = 'error-message';
+    newRampElement.appendChild(errorDiv);
+
+    // Ramp Name Label
+    const nameLabel = document.createElement('label');
+    nameLabel.htmlFor = `rampName${currentRampIndex}`;
+    nameLabel.textContent = 'Ramp Name:';
+    newRampElement.appendChild(nameLabel);
+
+    // Ramp Name Input
+    const nameInput = document.createElement('input');
+    nameInput.type = 'text';
+    nameInput.id = `rampName${currentRampIndex}`;
+    nameInput.value = `MyColorRamp${currentRampIndex}`;
+    newRampElement.appendChild(nameInput);
+
+    // Ramp Tags Label
+    const tagsLabel = document.createElement('label');
+    tagsLabel.htmlFor = `rampTags${currentRampIndex}`;
+    tagsLabel.textContent = 'Ramp Tags (comma-separated):';
+    newRampElement.appendChild(tagsLabel);
+
+    // Ramp Tags Input
+    const tagsInput = document.createElement('input');
+    tagsInput.type = 'text';
+    tagsInput.id = `rampTags${currentRampIndex}`;
+    tagsInput.value = `custom,ramp${currentRampIndex}`;
+    newRampElement.appendChild(tagsInput);
+
+    // Delete Button
+    const deleteButton = document.createElement('button');
+    deleteButton.className = 'delete-button';
+    deleteButton.textContent = 'Delete';
+    deleteButton.onclick = () => deleteRamp(newRampId); // Use arrow function or bind
+    newRampElement.appendChild(deleteButton);
+
+    // 3. Append the fully constructed new ramp element to the main container
+    container.appendChild(newRampElement);
+
+    // 4. Initialize color viewers for the newly added ramp
+    updateColorViewers(newRampId);
+}
+
+
+function deleteRamp(rampId) {
+    const rampGroup = document.getElementById(rampId);
+    if (rampGroup) {
+        rampGroup.remove();
+    }
+}
+
+function updateColorViewers(rampId) {
+    // Extract the counter number from the rampId (e.g., 'ramp-group-5' -> '5')
+    const rampIndexMatch = rampId.match(/-(\d+)$/);
+    if (!rampIndexMatch) return; // Should not happen with new IDs
+    const rampIndex = rampIndexMatch[1];
+
+    const colorInputElement = document.getElementById(`colorInput${rampIndex}`);
+    const colorViewersContainer = document.getElementById(`color-viewers${rampIndex}`);
+    const errorMessageElement = document.getElementById(`error-message${rampIndex}`);
+
+    if (!colorInputElement || !colorViewersContainer || !errorMessageElement) {
+        console.error("Could not find elements for ramp index:", rampIndex);
+        return;
+    }
+
+    const hexColorsInput = colorInputElement.value;
+    const hexColors = hexColorsInput.split(',').map(c => c.trim()).filter(c => c);
+
+    let viewersHTML = '';
+    let hasError = false;
+    let errorMessages = [];
+
+    hexColors.forEach(hex => {
+        const validHex = hex.match(/^#?([0-9a-fA-F]{3}|[0-9a-fA-F]{6})$/);
+        if (validHex) {
+            const color = hex.startsWith('#') ? hex : '#' + hex;
+            viewersHTML += `<span class="color-viewer" style="background-color: ${color};"></span>`;
+        } else {
+            viewersHTML += `<span class="color-viewer" style="background-color: #FFFFFF; border: 1px dashed red;" title="Invalid: ${hex}"></span>`;
+            hasError = true;
+            errorMessages.push(hex);
         }
     });
 
-    xmlString += '<Option type="QString" name="rampType" value="preset"/>\n';
-    xmlString += '</Option>\n';
-    xmlString += '</colorramp>\n';
-    xmlString += '</colorramps>\n<textformats/>\n<labelsettings/>\n<legendpatchshapes/>\n<symbols3d/>\n</qgis_style>';
+    colorViewersContainer.innerHTML = viewersHTML;
 
-    downloadXML(xmlString, rampName + '.xml');
+    if (hasError) {
+         errorMessageElement.textContent = `Invalid hex code(s): ${errorMessages.join(', ')}`;
+    } else {
+         errorMessageElement.textContent = "";
+    }
+}
+
+
+function generateXML() {
+    let xmlString = '<qgis_style version="2">\n<symbols/>\n<colorramps>\n';
+    const rampGroups = document.querySelectorAll('#ramp-containers .ramp-group');
+    let overallError = false;
+
+    if (rampGroups.length === 0) {
+        alert("Please add at least one color ramp before generating XML.");
+        return;
+    }
+
+    rampGroups.forEach(rampGroup => {
+        const rampId = rampGroup.id;
+        const rampIndexMatch = rampId.match(/-(\d+)$/);
+        if (!rampIndexMatch) return; // Skip if ID format is wrong
+        const rampIndex = rampIndexMatch[1];
+
+        const colorInputElement = document.getElementById(`colorInput${rampIndex}`);
+        const rampNameElement = document.getElementById(`rampName${rampIndex}`);
+        const rampTagsElement = document.getElementById(`rampTags${rampIndex}`);
+        const errorMessageElement = document.getElementById(`error-message${rampIndex}`);
+
+        // Basic check for element existence
+        if (!colorInputElement || !rampNameElement || !rampTagsElement || !errorMessageElement) {
+            console.error("Skipping ramp due to missing elements:", rampId);
+            overallError = true;
+            // Ensure some feedback to the user about which ramp failed
+            if(errorMessageElement) errorMessageElement.textContent = "Internal error: Could not find all elements for this ramp.";
+            else alert(`Internal error finding elements for ramp ${rampId}`);
+            return;
+        }
+
+        const hexColorsRaw = colorInputElement.value.split(',');
+        const rampName = rampNameElement.value.trim() || `UnnamedRamp${rampIndex}`; // Default name if empty
+        const rampTags = rampTagsElement.value.trim();
+        let currentRampHasError = false;
+        let rampXmlContent = '';
+
+        rampXmlContent += `<colorramp type="preset" name="${rampName}" tags="${rampTags}">\n`;
+        rampXmlContent += '  <Option type="Map">\n';
+
+        const validColors = []; // Store valid colors for this ramp
+
+        hexColorsRaw.forEach((hexColor) => {
+            const trimmedHex = hexColor.trim();
+            if (!trimmedHex) return; // Skip empty entries
+
+            const rgb = hexToRgb(trimmedHex);
+            if (!rgb) {
+                errorMessageElement.textContent = `Invalid hex code: ${trimmedHex}`;
+                currentRampHasError = true;
+                overallError = true;
+            } else {
+                 validColors.push({ hex: trimmedHex, rgb: rgb });
+            }
+        });
+
+        // If errors were found IN THIS RAMP, stop processing it for XML
+        if (currentRampHasError) {
+            errorMessageElement.textContent = `Error in hex codes. Fix before generating XML.`;
+            return; // Skip adding this ramp to the final XML
+        }
+
+        // Check if there are actually any valid colors after parsing
+        if (validColors.length === 0) {
+             errorMessageElement.textContent = `No valid colors entered for this ramp.`;
+             overallError = true;
+             return; // Skip this ramp
+        }
+
+        // Clear error message if this ramp is now valid
+        errorMessageElement.textContent = "";
+
+        // Generate XML options only for valid colors
+        validColors.forEach((colorData, index) => {
+             const rgba = `${colorData.rgb.r},${colorData.rgb.g},${colorData.rgb.b},255`;
+             rampXmlContent += `    <Option type="QString" name="preset_color_${index}" value="${rgba}"/>\n`;
+             rampXmlContent += `    <Option type="QString" name="preset_color_name_${index}" value="${colorData.hex} (Stop ${index + 1})"/>\n`;
+        });
+
+
+        rampXmlContent += '    <Option type="QString" name="rampType" value="preset"/>\n';
+        rampXmlContent += '  </Option>\n';
+        rampXmlContent += '</colorramp>\n';
+
+        xmlString += rampXmlContent; // Add this valid ramp's XML
+    });
+
+    if (overallError) {
+        alert("XML generation failed. Please fix the errors indicated in the invalid ramps.");
+        return;
+    }
+
+    xmlString += '</colorramps>\n<textformats/>\n<labelsettings/>\n<legendpatchshapes/>\n<symbols3d/>\n</qgis_style>';
+    downloadXML(xmlString, 'QGIS_ColorRamps.xml');
 }
 
 function hexToRgb(hex) {
-    const shorthandRegex = /^#?([a-f\d])([a-f\d])([a-f\d])$/i;
-    hex = hex.replace(shorthandRegex, (m, r, g, b) => r + r + g + g + b + b);
+    const hexRegex = /^#?([0-9a-fA-F]{3}|[0-9a-fA-F]{6})$/;
+    const match = hex.match(hexRegex);
+    if (!match) {
+       return null;
+    }
+    let hexProcessed = match[1];
 
-    const result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
-    return result ? {
-        r: parseInt(result[1], 16),
-        g: parseInt(result[2], 16),
-        b: parseInt(result[3], 16)
-    } : null;
+    if (hexProcessed.length === 3) {
+        hexProcessed = hexProcessed.split('').map(char => char + char).join('');
+    }
+
+    const bigint = parseInt(hexProcessed, 16);
+    const r = (bigint >> 16) & 255;
+    const g = (bigint >> 8) & 255;
+    const b = bigint & 255;
+
+    return { r, g, b };
 }
 
+
 function downloadXML(xmlString, filename) {
+    const blob = new Blob([xmlString], { type: 'text/xml;charset=utf-8' });
+    const url = URL.createObjectURL(blob);
     const element = document.createElement('a');
-    element.setAttribute('href', 'data:text/xml;charset=utf-8,' + encodeURIComponent(xmlString));
+    element.setAttribute('href', url);
     element.setAttribute('download', filename);
     element.style.display = 'none';
     document.body.appendChild(element);
     element.click();
     document.body.removeChild(element);
+    URL.revokeObjectURL(url);
 }
-</script>
 
+// Optional: Add the first ramp automatically on page load
+// document.addEventListener('DOMContentLoaded', () => {
+//     addRamp();
+// });
+
+</script>
 </body>
 </html>
